tests/baselines/reference/parserErrorRecovery_ArgumentList2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList2.ts (2 errors) ====
    function foo() {
       bar(;
           ~
!!! error TS1005: ')' expected.
       ~~~
!!! error TS2304: Cannot find name 'bar'.
    }